--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -73,6 +73,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            <div id="logo"></div>
             <a href="{{ SITEURL }}" class="navbar-brand"><strong>{{ SITENAME }}</strong></a>
             <span id="navbar-subtitle">{{ SITESUBTITLE }}</span>
         </div>
