--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -6,6 +6,14 @@ body {
     background-color: transparent;
 }
 
+#sidebar {
+    position: absolute;
+    right: 0px;
+    width: 250px;
+    margin-bottom: -10px;
+    padding-top: 0px;
+}
+
 .list-group-item {
     border: none;
 }
@@ -85,3 +93,10 @@ a, a:hover {
     height: 48px;
     margin-left: -100px;
 }
+.list-group-item-narrow {
+    display: block;
+    margin-bottom: -1px;
+    padding: 3px 20px;
+    position-relative;
+}
+
