--- a/theme/templates/includes/sidebar.html
+++ b/theme/templates/includes/sidebar.html
@@ -21,6 +21,7 @@
             {#        </li>#}
             {#    {% endfor %}#}
 
+
             <li class="list-group-item"><a href="{{ SITEURL }}/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
             {% for tag in tag_cloud|sort(attribute='1') %}
                 <li class="list-group-item tag-{{ tag.1 }}">
@@ -32,4 +33,14 @@
         </ul>
     </section>
     {% include 'includes/github.html' %}
+    <section>
+            {% if LINKS %}
+                <li class="list-group-item"><h4><i class="icon-folder-open icon-large"></i>Blogroll</h4></li>
+                {% for name, link in LINKS %}
+                    <li class="list-group-item-narrow"><a href="{{ link }}"><i
+                            class="icon-circle-arrow-right icon-small"></i>{{ name }}
+                    </a></li>
+                {% endfor %}
+            {% endif %}
+    </section>
 </aside>
