--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -121,5 +121,16 @@
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
 <script src="{{ SITEURL }}/theme/js/respond.min.js"></script>
 {% include 'includes/disqus_script.html' %}
+
+<div id="footer">
+    <strong>Contemplative Coding</strong> &ndash; <em>Meditations on Language &amp; Technology</em> &mdash; A research &amp; technology blog by <strong>Maarten van Gompel</strong> (<em>proycon</em>)
+    <ul>
+        <li>E-mail: <a href="mailto:proycon at anaproy dot nl">proycon at anaproy dot nl</a></li>
+        <li>XMPP: proycon at anaproy dot nl</li>
+        <li>IRC: proycon at freenode.org</li>
+        <li>GnuPG key: 0x1A31555C</li>
+    </ul>
+
+</div>
 </body>
 </html>
